--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@ h2, h3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
-  margin-top: 10px;
-}
-.block p {
-  margin: 6px 0;
 }
 .label {
   font-weight: bold;
@@ -40,7 +36,6 @@ table {
   border-collapse: collapse;
   margin-top: 15px;
   font-size: 14px;
-  background: white;
 }
 th, td {
   border: 1px solid #ccc;
@@ -50,6 +45,11 @@ th, td {
 th {
   background: #003f88;
   color: white;
+}
+a {
+  color: #003f88;
+  text-decoration: none;
+  font-weight: bold;
 }
 </style>
 
@@ -62,6 +62,14 @@ th {
 <div id="history"></div>
 
 <script>
+function formatDate(val) {
+  // Expecting DD/MM/YYYY → show DD-MM-YYYY
+  if (typeof val === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(val)) {
+    return val.replace(/\//g, "-");
+  }
+  return val ?? "";
+}
+
 async function loadDrive() {
   const params = new URLSearchParams(window.location.search);
   const id = params.get("id");
@@ -85,8 +93,8 @@ async function loadDrive() {
     let match = null;
 
     rows.forEach(r => {
-      const BAT = (r.c[1]?.v || "").toString().trim();   // Column B
-      const EQP = (r.c[2]?.v || "").toString().trim();   // Column C
+      const BAT = (r.c[1]?.v || "").toString().trim();
+      const EQP = (r.c[2]?.v || "").toString().trim();
       const UID = `${BAT}-${EQP}`.toUpperCase();
 
       if (UID !== id.toUpperCase()) return;
@@ -94,21 +102,21 @@ async function loadDrive() {
       match = {
         BAT,
         EQP,
-        pumpType: r.c[4]?.v || "",     // E
-        ratings: r.c[5]?.v || "",      // F
-        flc: r.c[10]?.v || "",          // K
-        sfu: r.c[14]?.v || "",          // O
-        fuse: r.c[15]?.v || "",         // P
-        contactor: r.c[16]?.v || "",    // Q
-        relay: r.c[17]?.v || "",        // R
-        ctM: r.c[18]?.v || "",          // S
-        ctP: r.c[19]?.v || "",          // T
-        aux: r.c[20]?.v || ""           // U
+        pumpType: r.c[4]?.v || "",
+        ratings: r.c[5]?.v || "",
+        flc: r.c[10]?.v || "",
+        sfu: r.c[14]?.v || "",
+        fuse: r.c[15]?.v || "",
+        contactor: r.c[16]?.v || "",
+        relay: r.c[17]?.v || "",
+        ctM: r.c[18]?.v || "",
+        ctP: r.c[19]?.v || "",
+        aux: r.c[20]?.v || ""
       };
     });
 
     if (!match) {
-      out.innerHTML = "Drive not found in sheet.";
+      out.innerHTML = "Drive not found.";
       return;
     }
 
@@ -118,19 +126,17 @@ async function loadDrive() {
         <p><span class="label">Pump Type:</span> ${match.pumpType}</p>
 
         <div class="grid">
-          <div class="block">
+          <div>
             <p><span class="label">Ratings:</span> ${match.ratings}</p>
             <p><span class="label">FLC:</span> ${match.flc}</p>
           </div>
-
-          <div class="block">
+          <div>
             <p><span class="label">SFU:</span> ${match.sfu}</p>
             <p><span class="label">Fuse:</span> ${match.fuse}</p>
             <p><span class="label">Contactor:</span> ${match.contactor}</p>
             <p><span class="label">Relay:</span> ${match.relay}</p>
           </div>
-
-          <div class="block">
+          <div>
             <p><span class="label">CT (M):</span> ${match.ctM}</p>
             <p><span class="label">CT (P):</span> ${match.ctP}</p>
             <p><span class="label">Aux Contactor:</span> ${match.aux}</p>
@@ -139,7 +145,6 @@ async function loadDrive() {
       </div>
     `;
 
-    // Load history table AFTER drive loads
     loadHistory(id);
 
   } catch (err) {
@@ -160,48 +165,53 @@ async function loadHistory(id) {
     const text = await resp.text();
     const json = JSON.parse(text.substring(47, text.length - 2));
 
-    const cols = json.table.cols;
+    const cols = json.table.cols.slice(0, 11); // A → K
     const rows = json.table.rows;
 
-    let matchedRows = [];
+    let matched = [];
 
     rows.forEach(r => {
-      const BAT = (r.c[2]?.v || "").toString().trim(); // Column C
-      const EQP = (r.c[3]?.v || "").toString().trim(); // Column D
+      const BAT = (r.c[2]?.v || "").toString().trim(); // C
+      const EQP = (r.c[3]?.v || "").toString().trim(); // D
       const UID = `${BAT}-${EQP}`.toUpperCase();
 
       if (UID !== id.toUpperCase()) return;
 
-      matchedRows.push(r.c.slice(2)); // C → last column
+      matched.push(r.c.slice(0, 11)); // A → K
     });
 
-    if (matchedRows.length === 0) {
+    if (matched.length === 0) {
       out.innerHTML = "<p><b>No history data found.</b></p>";
       return;
     }
 
-    let html = `
-      <div class="card">
-        <h3>History Details</h3>
-        <table>
-          <thead><tr>
-    `;
+    let html = `<div class="card"><h3>History Details</h3><table><thead><tr>`;
 
-    cols.slice(2).forEach(c => {
+    cols.forEach(c => {
       html += `<th>${c.label || ""}</th>`;
     });
 
-    html += "</tr></thead><tbody>";
+    html += `</tr></thead><tbody>`;
 
-    matchedRows.forEach(row => {
+    matched.forEach(row => {
       html += "<tr>";
-      row.forEach(cell => {
-        html += `<td>${cell?.v ?? ""}</td>`;
+      row.forEach((cell, i) => {
+        let val = cell?.v ?? "";
+
+        // Date formatting
+        val = formatDate(val);
+
+        // Column K → URL
+        if (i === 10 && val) {
+          val = `<a href="${val}" target="_blank">Open</a>`;
+        }
+
+        html += `<td>${val}</td>`;
       });
       html += "</tr>";
     });
 
-    html += "</tbody></table></div>";
+    html += `</tbody></table></div>`;
     out.innerHTML = html;
 
   } catch (err) {
