--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -10,9 +10,7 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 {
-  color: #003f88;
-}
+h2, h3 { color: #003f88; }
 .card {
   padding: 15px;
   background: white;
@@ -20,17 +18,6 @@ h2, h3 {
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   margin-top: 15px;
 }
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 15px;
-}
-.label {
-  font-weight: bold;
-  color: #003f88;
-}
-
-/* TABLE */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -40,7 +27,6 @@ table {
 th, td {
   border: 1px solid #ccc;
   padding: 6px 8px;
-  text-align: left;
 }
 th {
   background: #003f88;
@@ -48,8 +34,8 @@ th {
 }
 a {
   color: #003f88;
-  text-decoration: none;
   font-weight: bold;
+  text-decoration: none;
 }
 </style>
 </head>
@@ -62,168 +48,117 @@ a {
 <div id="history"></div>
 
 <script>
-// ---------- DATE FORMATTER ----------
-function formatDate(val) {
-  // Converts DD/MM/YYYY → DD-MM-YYYY (display only)
-  if (typeof val === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(val)) {
-    return val.replace(/\//g, "-");
+// ---------- HELPERS ----------
+function formatDate(v) {
+  if (typeof v === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    return v.replace(/\//g, "-");
   }
-  return val ?? "";
+  return v ?? "";
 }
 
-// ---------- LOAD DRIVE DETAILS ----------
+// ---------- LOAD DRIVE ----------
 async function loadDrive() {
-  const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
-  const out = document.getElementById("drive");
-
+  const id = new URLSearchParams(location.search).get("id");
   if (!id) {
-    out.innerHTML = "No drive ID found in URL.";
+    document.getElementById("drive").innerHTML = "No drive ID in URL.";
     return;
   }
+
+  // SPLIT ID SAFELY (FIRST '-' ONLY)
+  const firstDash = id.indexOf("-");
+  const urlBAT = id.substring(0, firstDash).trim().toUpperCase();
+  const urlEQP = id.substring(firstDash + 1).trim().toUpperCase();
 
   const driveURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=1274719919&tqx=out:json";
 
-  try {
-    const resp = await fetch(driveURL);
-    const text = await resp.text();
-    const json = JSON.parse(text.substring(47, text.length - 2));
-    const rows = json.table.rows;
+  const resp = await fetch(driveURL);
+  const text = await resp.text();
+  const json = JSON.parse(text.substring(47, text.length - 2));
 
-    let match = null;
+  let match = null;
 
-    rows.forEach(r => {
-      const BAT = (r.c[1]?.v || "").toString().trim(); // Column B
-      const EQP = (r.c[2]?.v || "").toString().trim(); // Column C
-      const UID = `${BAT}-${EQP}`.toUpperCase();
+  json.table.rows.forEach(r => {
+    const c = r.c || [];
+    const BAT = (c[1]?.v || "").toString().trim().toUpperCase();
+    const EQP = (c[2]?.v || "").toString().trim().toUpperCase();
 
-      if (UID !== id.toUpperCase()) return;
+    if (BAT !== urlBAT || EQP !== urlEQP) return;
 
-      match = {
-        BAT,
-        EQP,
-        pumpType: r.c[4]?.v || "",     // E
-        ratings: r.c[5]?.v || "",      // F
-        flc: r.c[10]?.v || "",          // K
-        sfu: r.c[14]?.v || "",          // O
-        fuse: r.c[15]?.v || "",         // P
-        contactor: r.c[16]?.v || "",    // Q
-        relay: r.c[17]?.v || "",        // R
-        ctM: r.c[18]?.v || "",          // S
-        ctP: r.c[19]?.v || "",          // T
-        aux: r.c[20]?.v || ""           // U
-      };
-    });
+    match = {
+      BAT, EQP,
+      pumpType: c[4]?.v || "",
+      ratings: c[5]?.v || "",
+      flc: c[10]?.v || ""
+    };
+  });
 
-    if (!match) {
-      out.innerHTML = "Drive not found.";
-      return;
-    }
-
-    out.innerHTML = `
-      <div class="card">
-        <h3>${match.BAT} – ${match.EQP}</h3>
-        <p><span class="label">Pump Type:</span> ${match.pumpType}</p>
-
-        <div class="grid">
-          <div>
-            <p><span class="label">Ratings:</span> ${match.ratings}</p>
-            <p><span class="label">FLC:</span> ${match.flc}</p>
-          </div>
-          <div>
-            <p><span class="label">SFU:</span> ${match.sfu}</p>
-            <p><span class="label">Fuse:</span> ${match.fuse}</p>
-            <p><span class="label">Contactor:</span> ${match.contactor}</p>
-            <p><span class="label">Relay:</span> ${match.relay}</p>
-          </div>
-          <div>
-            <p><span class="label">CT (M):</span> ${match.ctM}</p>
-            <p><span class="label">CT (P):</span> ${match.ctP}</p>
-            <p><span class="label">Aux Contactor:</span> ${match.aux}</p>
-          </div>
-        </div>
-      </div>
-    `;
-
-    loadHistory(id);
-
-  } catch (err) {
-    console.error(err);
-    out.innerHTML = "Error loading drive data.";
+  if (!match) {
+    document.getElementById("drive").innerHTML = "Drive not found.";
+    return;
   }
+
+  document.getElementById("drive").innerHTML = `
+    <div class="card">
+      <h3>${match.BAT} – ${match.EQP}</h3>
+      <p><b>Pump Type:</b> ${match.pumpType}</p>
+      <p><b>Ratings:</b> ${match.ratings}</p>
+      <p><b>FLC:</b> ${match.flc}</p>
+    </div>
+  `;
+
+  loadHistory(urlBAT, urlEQP);
 }
 
-// ---------- LOAD HISTORY TABLE ----------
-async function loadHistory(id) {
+// ---------- LOAD HISTORY ----------
+async function loadHistory(urlBAT, urlEQP) {
   const out = document.getElementById("history");
 
   const historyURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
 
-  try {
-    const resp = await fetch(historyURL);
-    const text = await resp.text();
-    const json = JSON.parse(text.substring(47, text.length - 2));
+  const resp = await fetch(historyURL);
+  const text = await resp.text();
+  const json = JSON.parse(text.substring(47, text.length - 2));
 
-    const cols = json.table.cols.slice(0, 11); // A → K
-    const rows = json.table.rows;
+  const cols = json.table.cols.slice(0, 11); // A → K
+  const rows = json.table.rows;
 
-    let matched = [];
+  let matched = [];
 
-    rows.forEach(r => {
-      const BAT = (r.c[2]?.v || "").toString().trim(); // Column C
-      const EQP = (r.c[3]?.v || "").toString().trim(); // Column D
-      const UID = `${BAT}-${EQP}`.toUpperCase();
+  rows.forEach(r => {
+    const c = r.c || [];
+    const BAT = (c[2]?.v || "").toString().trim().toUpperCase();
+    const EQP = (c[3]?.v || "").toString().trim().toUpperCase();
 
-      if (UID !== id.toUpperCase()) return;
+    if (BAT !== urlBAT || EQP !== urlEQP) return;
 
-      matched.push(r.c.slice(0, 11)); // A → K
-    });
+    matched.push(c.slice(0, 11));
+  });
 
-    if (matched.length === 0) {
-      out.innerHTML = "<p><b>No history data found.</b></p>";
-      return;
-    }
-
-    let html = `
-      <div class="card">
-        <h3>History Details</h3>
-        <table>
-          <thead><tr>
-    `;
-
-    cols.forEach(c => {
-      html += `<th>${c.label || ""}</th>`;
-    });
-
-    html += "</tr></thead><tbody>";
-
-    matched.forEach(row => {
-      html += "<tr>";
-      row.forEach((cell, i) => {
-        let val = cell?.v ?? "";
-        val = formatDate(val);
-
-        // Column K → URL
-        if (i === 10 && val) {
-          val = `<a href="${val}" target="_blank">Open</a>`;
-        }
-
-        html += `<td>${val}</td>`;
-      });
-      html += "</tr>";
-    });
-
-    html += "</tbody></table></div>";
-    out.innerHTML = html;
-
-  } catch (err) {
-    console.error(err);
-    out.innerHTML = "Error loading history table.";
+  if (!matched.length) {
+    out.innerHTML = "<b>No history data found.</b>";
+    return;
   }
+
+  let html = `<div class="card"><h3>History Details</h3><table><thead><tr>`;
+  cols.forEach(c => html += `<th>${c.label || ""}</th>`);
+  html += `</tr></thead><tbody>`;
+
+  matched.forEach(r => {
+    html += "<tr>";
+    r.forEach((cell, i) => {
+      let v = formatDate(cell?.v ?? "");
+      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
+      html += `<td>${v}</td>`;
+    });
+    html += "</tr>";
+  });
+
+  html += "</tbody></table></div>";
+  out.innerHTML = html;
 }
 
 loadDrive();
