--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 { color: #003f88; }
+h2, h3 {
+  color: #003f88;
+}
 .card {
   padding: 15px;
   background: white;
@@ -18,6 +20,17 @@ h2, h3 { color: #003f88; }
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   margin-top: 15px;
 }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
+}
+.label {
+  font-weight: bold;
+  color: #003f88;
+}
+
+/* TABLE */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -27,6 +40,7 @@ table {
 th, td {
   border: 1px solid #ccc;
   padding: 6px 8px;
+  text-align: left;
 }
 th {
   background: #003f88;
@@ -38,8 +52,8 @@ a {
   text-decoration: none;
 }
 </style>
-</head>
 
+</head>
 <body>
 
 <h2>Drive Information</h2>
@@ -48,117 +62,171 @@ a {
 <div id="history"></div>
 
 <script>
-// ---------- HELPERS ----------
-function formatDate(v) {
-  if (typeof v === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
-    return v.replace(/\//g, "-");
+function formatDate(val) {
+  // DD/MM/YYYY → DD-MM-YYYY
+  if (typeof val === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(val)) {
+    return val.replace(/\//g, "-");
   }
-  return v ?? "";
+  return val ?? "";
 }
 
-// ---------- LOAD DRIVE ----------
 async function loadDrive() {
-  const id = new URLSearchParams(location.search).get("id");
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get("id");
+  const out = document.getElementById("drive");
+
   if (!id) {
-    document.getElementById("drive").innerHTML = "No drive ID in URL.";
+    out.innerHTML = "No drive ID found in URL.";
     return;
   }
-
-  // SPLIT ID SAFELY (FIRST '-' ONLY)
-  const firstDash = id.indexOf("-");
-  const urlBAT = id.substring(0, firstDash).trim().toUpperCase();
-  const urlEQP = id.substring(firstDash + 1).trim().toUpperCase();
 
   const driveURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=1274719919&tqx=out:json";
 
-  const resp = await fetch(driveURL);
-  const text = await resp.text();
-  const json = JSON.parse(text.substring(47, text.length - 2));
+  try {
+    const resp = await fetch(driveURL);
+    const text = await resp.text();
+    const json = JSON.parse(text.substring(47, text.length - 2));
+    const rows = json.table.rows;
 
-  let match = null;
+    let match = null;
 
-  json.table.rows.forEach(r => {
-    const c = r.c || [];
-    const BAT = (c[1]?.v || "").toString().trim().toUpperCase();
-    const EQP = (c[2]?.v || "").toString().trim().toUpperCase();
+    rows.forEach(r => {
+      const c = r.c || [];
+      const BAT = (c[1]?.v || "").toString().trim(); // B
+      const EQP = (c[2]?.v || "").toString().trim(); // C
+      const UID = `${BAT}-${EQP}`.toUpperCase();
 
-    if (BAT !== urlBAT || EQP !== urlEQP) return;
+      if (UID !== id.toUpperCase()) return;
 
-    match = {
-      BAT, EQP,
-      pumpType: c[4]?.v || "",
-      ratings: c[5]?.v || "",
-      flc: c[10]?.v || ""
-    };
-  });
+      match = {
+        BAT,
+        EQP,
+        pumpType: c[4]?.v || "",     // E
+        ratings: c[5]?.v || "",      // F
+        flc: c[10]?.v || "",          // K
+        sfu: c[14]?.v || "",          // O
+        fuse: c[15]?.v || "",         // P
+        contactor: c[16]?.v || "",    // Q
+        relay: c[17]?.v || "",        // R
+        ctM: c[18]?.v || "",          // S
+        ctP: c[19]?.v || "",          // T
+        aux: c[20]?.v || ""           // U
+      };
+    });
 
-  if (!match) {
-    document.getElementById("drive").innerHTML = "Drive not found.";
-    return;
+    if (!match) {
+      out.innerHTML = "Drive not found.";
+      return;
+    }
+
+    out.innerHTML = `
+      <div class="card">
+        <h3>${match.BAT} – ${match.EQP}</h3>
+        <p><span class="label">Pump Type:</span> ${match.pumpType}</p>
+
+        <div class="grid">
+          <div>
+            <p><span class="label">Ratings:</span> ${match.ratings}</p>
+            <p><span class="label">FLC:</span> ${match.flc}</p>
+          </div>
+          <div>
+            <p><span class="label">SFU:</span> ${match.sfu}</p>
+            <p><span class="label">Fuse:</span> ${match.fuse}</p>
+            <p><span class="label">Contactor:</span> ${match.contactor}</p>
+            <p><span class="label">Relay:</span> ${match.relay}</p>
+          </div>
+          <div>
+            <p><span class="label">CT (M):</span> ${match.ctM}</p>
+            <p><span class="label">CT (P):</span> ${match.ctP}</p>
+            <p><span class="label">Aux Contactor:</span> ${match.aux}</p>
+          </div>
+        </div>
+      </div>
+    `;
+
+    loadHistory(id);
+
+  } catch (err) {
+    console.error(err);
+    out.innerHTML = "Error loading drive data.";
   }
-
-  document.getElementById("drive").innerHTML = `
-    <div class="card">
-      <h3>${match.BAT} – ${match.EQP}</h3>
-      <p><b>Pump Type:</b> ${match.pumpType}</p>
-      <p><b>Ratings:</b> ${match.ratings}</p>
-      <p><b>FLC:</b> ${match.flc}</p>
-    </div>
-  `;
-
-  loadHistory(urlBAT, urlEQP);
 }
 
-// ---------- LOAD HISTORY ----------
-async function loadHistory(urlBAT, urlEQP) {
+async function loadHistory(id) {
   const out = document.getElementById("history");
 
   const historyURL =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
 
-  const resp = await fetch(historyURL);
-  const text = await resp.text();
-  const json = JSON.parse(text.substring(47, text.length - 2));
+  try {
+    const resp = await fetch(historyURL);
+    const text = await resp.text();
+    const json = JSON.parse(text.substring(47, text.length - 2));
 
-  const cols = json.table.cols.slice(0, 11); // A → K
-  const rows = json.table.rows;
+    const cols = json.table.cols.slice(0, 11); // A → K
+    const rows = json.table.rows;
 
-  let matched = [];
+    let matched = [];
 
-  rows.forEach(r => {
-    const c = r.c || [];
-    const BAT = (c[2]?.v || "").toString().trim().toUpperCase();
-    const EQP = (c[3]?.v || "").toString().trim().toUpperCase();
+    rows.forEach(r => {
+      const c = r.c || [];
 
-    if (BAT !== urlBAT || EQP !== urlEQP) return;
+      const BAT = (c[2]?.v || "").toString().trim(); // C
+      const EQP = (c[3]?.v || "").toString().trim(); // D
+      if (!BAT || !EQP) return;
 
-    matched.push(c.slice(0, 11));
-  });
+      const UID = `${BAT}-${EQP}`.toUpperCase();
+      if (UID !== id.toUpperCase()) return;
 
-  if (!matched.length) {
-    out.innerHTML = "<b>No history data found.</b>";
-    return;
-  }
-
-  let html = `<div class="card"><h3>History Details</h3><table><thead><tr>`;
-  cols.forEach(c => html += `<th>${c.label || ""}</th>`);
-  html += `</tr></thead><tbody>`;
-
-  matched.forEach(r => {
-    html += "<tr>";
-    r.forEach((cell, i) => {
-      let v = formatDate(cell?.v ?? "");
-      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
-      html += `<td>${v}</td>`;
+      let row = [];
+      for (let i = 0; i <= 10; i++) {
+        row.push(c[i]?.v ?? "");
+      }
+      matched.push(row);
     });
-    html += "</tr>";
-  });
 
-  html += "</tbody></table></div>";
-  out.innerHTML = html;
+    if (matched.length === 0) {
+      out.innerHTML = "<p><b>No history data found.</b></p>";
+      return;
+    }
+
+    let html = `
+      <div class="card">
+        <h3>History Details</h3>
+        <table>
+          <thead><tr>
+    `;
+
+    cols.forEach(c => {
+      html += `<th>${c.label || ""}</th>`;
+    });
+
+    html += "</tr></thead><tbody>";
+
+    matched.forEach(row => {
+      html += "<tr>";
+      row.forEach((val, i) => {
+        val = formatDate(val);
+
+        if (i === 10 && val) {
+          val = `<a href="${val}" target="_blank">Open</a>`;
+        }
+
+        html += `<td>${val}</td>`;
+      });
+      html += "</tr>";
+    });
+
+    html += "</tbody></table></div>";
+    out.innerHTML = html;
+
+  } catch (err) {
+    console.error(err);
+    out.innerHTML = "Error loading history table.";
+  }
 }
 
 loadDrive();
