--- a/index2.html
+++ b/index2.html
@@ -52,8 +52,8 @@ a {
   text-decoration: none;
 }
 </style>
-
 </head>
+
 <body>
 
 <h2>Drive Information</h2>
@@ -62,14 +62,29 @@ a {
 <div id="history"></div>
 
 <script>
+// -------- DATE FORMATTER --------
 function formatDate(val) {
-  // DD/MM/YYYY → DD-MM-YYYY
+
+  // Case 1: Date(2025,3,18)
+  if (typeof val === "string" && val.startsWith("Date(")) {
+    const parts = val.match(/\d+/g);
+    if (parts && parts.length === 3) {
+      const y = parts[0];
+      const m = String(Number(parts[1]) + 1).padStart(2, "0");
+      const d = String(parts[2]).padStart(2, "0");
+      return `${d}-${m}-${y}`;
+    }
+  }
+
+  // Case 2: DD/MM/YYYY
   if (typeof val === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(val)) {
     return val.replace(/\//g, "-");
   }
+
   return val ?? "";
 }
 
+// -------- LOAD DRIVE --------
 async function loadDrive() {
   const params = new URLSearchParams(window.location.search);
   const id = params.get("id");
@@ -84,76 +99,69 @@ async function loadDrive() {
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=1274719919&tqx=out:json";
 
-  try {
-    const resp = await fetch(driveURL);
-    const text = await resp.text();
-    const json = JSON.parse(text.substring(47, text.length - 2));
-    const rows = json.table.rows;
+  const resp = await fetch(driveURL);
+  const text = await resp.text();
+  const json = JSON.parse(text.substring(47, text.length - 2));
 
-    let match = null;
+  let match = null;
 
-    rows.forEach(r => {
-      const c = r.c || [];
-      const BAT = (c[1]?.v || "").toString().trim(); // B
-      const EQP = (c[2]?.v || "").toString().trim(); // C
-      const UID = `${BAT}-${EQP}`.toUpperCase();
+  json.table.rows.forEach(r => {
+    const c = r.c || [];
+    const BAT = (c[1]?.v || "").toString().trim();
+    const EQP = (c[2]?.v || "").toString().trim();
 
-      if (UID !== id.toUpperCase()) return;
+    if (`${BAT}-${EQP}`.toUpperCase() !== id.toUpperCase()) return;
 
-      match = {
-        BAT,
-        EQP,
-        pumpType: c[4]?.v || "",     // E
-        ratings: c[5]?.v || "",      // F
-        flc: c[10]?.v || "",          // K
-        sfu: c[14]?.v || "",          // O
-        fuse: c[15]?.v || "",         // P
-        contactor: c[16]?.v || "",    // Q
-        relay: c[17]?.v || "",        // R
-        ctM: c[18]?.v || "",          // S
-        ctP: c[19]?.v || "",          // T
-        aux: c[20]?.v || ""           // U
-      };
-    });
+    match = {
+      BAT,
+      EQP,
+      pumpType: c[4]?.v || "",
+      ratings: c[5]?.v || "",
+      flc: c[10]?.v || "",
+      sfu: c[14]?.v || "",
+      fuse: c[15]?.v || "",
+      contactor: c[16]?.v || "",
+      relay: c[17]?.v || "",
+      ctM: c[18]?.v || "",
+      ctP: c[19]?.v || "",
+      aux: c[20]?.v || ""
+    };
+  });
 
-    if (!match) {
-      out.innerHTML = "Drive not found.";
-      return;
-    }
+  if (!match) {
+    out.innerHTML = "Drive not found.";
+    return;
+  }
 
-    out.innerHTML = `
-      <div class="card">
-        <h3>${match.BAT} – ${match.EQP}</h3>
-        <p><span class="label">Pump Type:</span> ${match.pumpType}</p>
+  out.innerHTML = `
+    <div class="card">
+      <h3>${match.BAT} – ${match.EQP}</h3>
+      <p><span class="label">Pump Type:</span> ${match.pumpType}</p>
 
-        <div class="grid">
-          <div>
-            <p><span class="label">Ratings:</span> ${match.ratings}</p>
-            <p><span class="label">FLC:</span> ${match.flc}</p>
-          </div>
-          <div>
-            <p><span class="label">SFU:</span> ${match.sfu}</p>
-            <p><span class="label">Fuse:</span> ${match.fuse}</p>
-            <p><span class="label">Contactor:</span> ${match.contactor}</p>
-            <p><span class="label">Relay:</span> ${match.relay}</p>
-          </div>
-          <div>
-            <p><span class="label">CT (M):</span> ${match.ctM}</p>
-            <p><span class="label">CT (P):</span> ${match.ctP}</p>
-            <p><span class="label">Aux Contactor:</span> ${match.aux}</p>
-          </div>
+      <div class="grid">
+        <div>
+          <p><span class="label">Ratings:</span> ${match.ratings}</p>
+          <p><span class="label">FLC:</span> ${match.flc}</p>
+        </div>
+        <div>
+          <p><span class="label">SFU:</span> ${match.sfu}</p>
+          <p><span class="label">Fuse:</span> ${match.fuse}</p>
+          <p><span class="label">Contactor:</span> ${match.contactor}</p>
+          <p><span class="label">Relay:</span> ${match.relay}</p>
+        </div>
+        <div>
+          <p><span class="label">CT (M):</span> ${match.ctM}</p>
+          <p><span class="label">CT (P):</span> ${match.ctP}</p>
+          <p><span class="label">Aux Contactor:</span> ${match.aux}</p>
         </div>
       </div>
-    `;
+    </div>
+  `;
 
-    loadHistory(id);
-
-  } catch (err) {
-    console.error(err);
-    out.innerHTML = "Error loading drive data.";
-  }
+  loadHistory(id);
 }
 
+// -------- LOAD HISTORY --------
 async function loadHistory(id) {
   const out = document.getElementById("history");
 
@@ -161,72 +169,53 @@ async function loadHistory(id) {
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
 
-  try {
-    const resp = await fetch(historyURL);
-    const text = await resp.text();
-    const json = JSON.parse(text.substring(47, text.length - 2));
+  const resp = await fetch(historyURL);
+  const text = await resp.text();
+  const json = JSON.parse(text.substring(47, text.length - 2));
 
-    const cols = json.table.cols.slice(0, 11); // A → K
-    const rows = json.table.rows;
+  const rows = json.table.rows;
+  const cols = json.table.cols;
 
-    let matched = [];
+  let matched = [];
 
-    rows.forEach(r => {
-      const c = r.c || [];
+  rows.forEach(r => {
+    const c = r.c || [];
+    const BAT = (c[2]?.v || "").toString().trim(); // C
+    const EQP = (c[3]?.v || "").toString().trim(); // D
 
-      const BAT = (c[2]?.v || "").toString().trim(); // C
-      const EQP = (c[3]?.v || "").toString().trim(); // D
-      if (!BAT || !EQP) return;
+    if (`${BAT}-${EQP}`.toUpperCase() !== id.toUpperCase()) return;
 
-      const UID = `${BAT}-${EQP}`.toUpperCase();
-      if (UID !== id.toUpperCase()) return;
+    matched.push(c);
+  });
 
-      let row = [];
-      for (let i = 0; i <= 10; i++) {
-        row.push(c[i]?.v ?? "");
-      }
-      matched.push(row);
-    });
-
-    if (matched.length === 0) {
-      out.innerHTML = "<p><b>No history data found.</b></p>";
-      return;
-    }
-
-    let html = `
-      <div class="card">
-        <h3>History Details</h3>
-        <table>
-          <thead><tr>
-    `;
-
-    cols.forEach(c => {
-      html += `<th>${c.label || ""}</th>`;
-    });
-
-    html += "</tr></thead><tbody>";
-
-    matched.forEach(row => {
-      html += "<tr>";
-      row.forEach((val, i) => {
-        val = formatDate(val);
-
-        if (i === 10 && val) {
-          val = `<a href="${val}" target="_blank">Open</a>`;
-        }
-
-        html += `<td>${val}</td>`;
-      });
-      html += "</tr>";
-    });
-
-    html += "</tbody></table></div>";
-    out.innerHTML = html;
-
-  } catch (err) {
-    console.error(err);
-    out.innerHTML = "Error loading history table.";
+  if (!matched.length) {
+    out.innerHTML = "<b>No history data found.</b>";
+    return;
   }
+
+  // Columns to SHOW (exclude C,D,I)
+  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
+
+  let html = `<div class="card"><h3>History Details</h3><table><thead><tr>`;
+
+  showCols.forEach(i => {
+    html += `<th>${cols[i]?.label || ""}</th>`;
+  });
+
+  html += "</tr></thead><tbody>";
+
+  matched.forEach(r => {
+    html += "<tr>";
+    showCols.forEach(i => {
+      let v = formatDate(r[i]?.v ?? "");
+      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
+      html += `<td>${v}</td>`;
+    });
+    html += "</tr>";
+  });
+
+  html += "</tbody></table></div>";
+  out.innerHTML = html;
 }
 
 loadDrive();
