--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 {
+h2 {
+  color: #003f88;
+  text-align: center;
+  font-size: 34px;   /* bigger heading */
+  font-weight: 700;
+  margin-bottom: 24px;
+}  
+h3 {
   color: #003f88;
 }
 
