--- a/history.html
+++ b/history.html
@@ -10,8 +10,15 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 { color: #003f88; }
+h2, h3 {
+  color: #003f88;
+  text-align: center;
+  font-size: 34px;   /* bigger heading */
+  font-weight: 700;
+  margin-bottom: 24px;
+}
 
+  
 .card {
   padding: 18px;
   background: white;
